--- a/src/index.css
+++ b/src/index.css
@@ -38,15 +38,20 @@ h1, h2 {
 
 #headerImage {
   background-color: rgba(0, 0, 0, 0.781);
-  width:auto;
-  height:auto;
+  width:24rem;
+  
   padding-left: 3rem;
   padding-right: 3rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
+ 
 }
 
 #authLogInButton {
   margin-left:auto;
   margin-right:auto;
+}
+
+#headerBackground {
+  background-color: rgba(0, 0, 0, 0.781);
 }
